# ozon-helper

./: .dockerignore  .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  start-local.bat  start-local.ps1
apps/image_worker/: .env.template  Dockerfile  pyproject.toml
apps/image_worker/src/image_worker/: __init__.py  text_worker.py  worker.py
apps/image_worker/tests/: test_text_worker.py
apps/mcp_server/: pyproject.toml
apps/mcp_server/scripts/: start_chatgpt_download_watcher.bat  watch_chatgpt_downloads.py
apps/mcp_server/tests/: test_runtime.py
apps/webui/: README.md  pyproject.toml  启动后端.bat
apps/webui/deploy/: DEPLOY.md  _smoke_mysql.py  migrate_sqlite_to_mysql.py  ozon-webui.service
apps/webui/frontend/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
apps/webui/scripts/: compare_listings.py  fetch_attr_values.py  fetch_attributes.py  fetch_cat_attrs.py  grab_ozon_video.py  sku_keywords_report.py  sku_traffic_report.py
apps/webui/tests/: smoke_agnes_live.py  smoke_ai_card_live.py  smoke_delivery_methods_live.py  smoke_fbs_live.py  smoke_ozon_pull_live.py  smoke_warehouses_live.py  test_admin_users.py  test_agnes.py  test_ai_block_config.py  test_ai_card.py  test_ai_card_profile.py  test_ai_media.py  test_ai_proposal.py  test_ai_text_config.py  test_analytics_service.py  test_api.py  test_api_multiuser.py  test_attr_values_cache.py  test_auth.py  test_auto_match_category.py  test_auto_publish.py  test_batch_publish.py  test_batch_update.py  test_card_chat_vision.py  test_category_tree.py  test_commission_categories.py  test_copy_images_multi.py  test_deepseek_images.py  test_delete_published.py  test_dimension_consistency.py  test_draft_images.py  test_draft_state.py  test_drafts.py  test_drafts_multiuser.py  test_ext_bridge.py  test_fulfillment_api.py  test_gallery_endpoints.py  test_gen_image.py  test_generate_card.py  test_hashtags.py  (+41 more)
docs/: local-run.md  mcp.md  (+3 more)
(+502 files in other folders)
