[project]
name = "ozon-image-worker"
version = "0.1.0"
description = "Ozon AI 出图 worker(消费 RabbitMQ → 出图 → OSS)"
requires-python = ">=3.10"
dependencies = [
    "ozon-common",
    "ozon-api",
]

[project.scripts]
ozon-worker = "image_worker.worker:main"
ozon-text-worker = "image_worker.text_worker:main_text"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_worker"]
