[project]
name = "ozon-mcp"
version = "0.1.0"
description = "MCP server for ozon-helper ChatGPT integration"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.8.0",
    "ozon-webui",
]

[project.scripts]
ozon-mcp = "ozon_mcp.server:main"
ozon-mcp-chatgpt = "ozon_mcp.server_chatgpt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ozon_mcp"]
