[project]
name = "ozon-webui"
version = "0.1.0"
description = "Ozon 上品助手 Web 后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    "pillow>=10.0",
    "ozon-common",
    "ozon-api",
]

[project.scripts]
ozon-webui = "webui.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webui"]
